RESOLVED FIXED290851
Fix DFG Int52 handling around negative zero
https://bugs.webkit.org/show_bug.cgi?id=290851
Summary Fix DFG Int52 handling around negative zero
daniel_liu4
Reported 2025-04-01 09:46:23 PDT
Attachments
daniel_liu4
Comment 1 2025-04-01 09:48:58 PDT
EWS
Comment 2 2025-04-23 15:26:26 PDT
Committed 294024@main (ea3cfb65e1ab): <https://commits.webkit.org/294024@main> Reviewed commits have been landed. Closing PR #43388 and removing active labels.
Fujii Hironori
Comment 3 2025-04-24 00:40:56 PDT
imported/w3c/web-platform-tests/webcodecs/video-encoder-rescaling.https.any.* tests are crashing after this change. > ASSERTION FAILED: bytecodeCanIgnoreNegativeZero(node->arithNodeFlags()) History: https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fwebcodecs%2Fvideo-encoder-rescaling.https.any.html%3Fh264_annexb
Note You need to log in before you can comment on or make changes to this bug.