Fix DFG Int52 handling around negative zero https://bugs.webkit.org/show_bug.cgi?id=290851 rdar://147481105

Reviewed by Yusuke Suzuki.

292253@main introduced some changes to Int52's handling of negative zero. However,
we have some cases where the AbstractInterpreter isn't tracking the possibility of
a negative zero correctly, and thus may wrongly mark states as inconsistent during
DFG/FTL compilation. This patch adds extra handling to cover cases when a negative
zero may appear.

* JSTests/stress/fiat-negative-zero-from-variable.js: Added.
(func_1_):
(func_2_):
* JSTests/stress/fiat-negative-zero.js: Added.
* Source/JavaScriptCore/dfg/DFGAbstractValue.cpp:
(JSC::DFG::AbstractValue::fixTypeForRepresentation):
* Source/JavaScriptCore/dfg/DFGFixupPhase.cpp:
(JSC::DFG::FixupPhase::fixupChecksInBlock):
* Source/JavaScriptCore/dfg/DFGMayExit.cpp:
* Source/JavaScriptCore/dfg/DFGSpeculativeJIT64.cpp:
(JSC::DFG::SpeculativeJIT::compile):
(JSC::DFG::SpeculativeJIT::convertAnyInt):
* Source/JavaScriptCore/ftl/FTLLowerDFGToB3.cpp:
(JSC::FTL::DFG::LowerDFGToB3::compileInt52Rep):
(JSC::FTL::DFG::LowerDFGToB3::compileCompareStrictEq):

Canonical link: https://commits.webkit.org/294024@main